# spoolbuddy

./: .gitignore  .pre-commit-config.yaml  CABLING_PLAN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.test  HARDWARE.md  SPOOLBUDDY_PLAN.md  SPOOLSTATION_PLAN.md  codeql-actions-results.sarif  codeql-javascript-results.sarif  codeql-python-results.sarif  codeql-rust-results.sarif  docker-compose.test.yml  docker-compose.yml  docker-publish.sh  pyproject.toml  test_backend.sh  test_docker.sh  test_frontend.sh  test_security.sh
.github/workflows/: ci.yml  codeql.yml
backend/: =5.5.0  config.py  main.py  models.py  pytest.ini  requirements.txt  usage_tracker.py
backend/api/: __init__.py  api_keys.py  catalog.py  cloud.py  colors.py  device.py  discovery.py  firmware.py  printers.py  serial.py  settings.py  spools.py  support.py  tags.py  updates.py
backend/db/: database.py
backend/mqtt/: __init__.py  client.py
backend/services/: bambu_cloud.py  bambu_ftp.py
backend/tags/: __init__.py  bambulab.py  decoder.py  models.py  openprinttag.py  openspool.py  opentag3d.py  spoolease_format.py
backend/tests/: conftest.py
eez/: spoolbuddy.eez-project
firmware/: .gitignore  Cargo.toml  README.md  build.rs  espflash.toml  flash.sh  package-lock.json  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/: lv_conf.h
firmware/components/custom_fonts/: CMakeLists.txt
firmware/components/display_driver/: display_driver.c  display_driver.h
firmware/components/eez_ui/: screens.c  ui.c  ui_ams_slot_modal.c  ui_backend.c  ui_display.c  ui_hardware.c  ui_image_circle.c  ui_image_circle_dotted.c  ui_image_circle_empty.c  ui_image_fd_calibration_auto_multi_extruders_left.c  ui_image_fd_calibration_auto_multi_extruders_right.c  ui_image_filament_load_o_series_left.c  ui_image_filament_load_o_series_right.c  ui_image_filament_load_p_series.c  ui_image_filament_load_x_series.c  ui_image_ip_address.c  ui_image_wifi.c  ui_internal.h  ui_nfc.c  ui_nfc_card.c  ui_nfc_card.h  ui_printer.c  ui_scale.c  ui_scan_result.c  ui_settings.c  ui_status_bar.c  ui_wifi.c
firmware/components/lvgl_stubs/: CMakeLists.txt  lv_deinit_stub.c
firmware/fonts/: montserrat_12_1bpp.c  montserrat_14_1bpp.c  montserrat_14_2bpp.c  montserrat_14_4bpp.c  montserrat_14_lcd.c  montserrat_16_1bpp.c  montserrat_16_2bpp.c  montserrat_16_4bpp.c  montserrat_16_lcd.c  montserrat_20_1bpp.c  montserrat_20_2bpp.c  montserrat_20_4bpp.c  montserrat_20_lcd.c  montserrat_24_1bpp.c  montserrat_24_2bpp.c  montserrat_24_4bpp.c  montserrat_24_lcd.c  montserrat_28_1bpp.c  spoolbuddy_logo.c  test_14.c
firmware/lvgl-configs/: lv_drv_conf.h
firmware/simulator/: Cargo.toml
firmware/simulator/.cargo/: config.toml
firmware/simulator/src/: convert_svg.rs  main.rs
firmware/squareline-spoolbuddy/: SpoolBuddy.sll  SpoolBuddy.slp  SpoolBuddy.spj  project.info
firmware/squareline-spoolbuddy/ui_files/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
firmware/squareline-spoolbuddy/ui_files/components/: ui_comp_hook.c
firmware/squareline-spoolbuddy/ui_files/images/: ui_img_icons_ams_png.c  ui_img_icons_bell_light_png.c  ui_img_icons_catalog_png.c  ui_img_icons_cover_png.c  ui_img_icons_dot_png.c  ui_img_icons_filament_png.c  ui_img_icons_nfc_png.c  ui_img_icons_rfid_png.c  ui_img_icons_scale_png.c  ui_img_icons_settings2_png.c  ui_img_logos_spoolbuddy_logo_transparent_png.c
firmware/squareline-spoolbuddy/ui_files/screens/: ui_HomeScreen.c  ui_HomeScreen.h
firmware/src/: backend_client.rs  display_settings_manager.rs  main.rs  main.rs.bak  nfc_bridge_manager.rs  nfc_init_minimal.txt  ota_manager.rs  scale_manager.rs  shared_i2c.rs  time_manager.rs  udp_logger.rs  wifi.rs  wifi_manager.rs
firmware/src/nfc/: i2c_bridge.rs  mod.rs  pn5180.rs
firmware/src/scale/: hx711.rs  mod.rs  nau7802.rs
firmware/src/ui/: display.rs  mod.rs  theme.rs  touch.rs
firmware/src/ui/screens/: about.rs  ams_overview.rs  ams_select.rs  calibration.rs  catalog.rs  display_brightness.rs  home.rs  mod.rs  nfc_reader.rs  scan_result.rs  settings.rs  spool_detail.rs  spool_info.rs
firmware/src/ui/widgets/: button.rs  catalog_card.rs  filter_pill.rs  icon.rs  info_row.rs  mod.rs  progress_bar.rs  settings_row.rs  slider.rs  spool_card.rs  status_bar.rs  tab_bar.rs  toggle.rs  weight_display.rs
firmware/tools/: screenshot.py
firmware/ui-mockup/: index.html
frontend/: nohup.out  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
lvgl-simulator-sdl/: CMakeLists.txt  backend_client.c  backend_client.h  main.c  sim_control.h  sync_and_build.sh  test.sh
lvgl-simulator-sdl/tests/: CMakeLists.txt  test_main.c  test_main_integration.c  unity_config.h
lvgl-simulator-sdl/tests/integration/: test_screen_transitions.c
lvgl-simulator-sdl/tests/mocks/: mock_backend.c  mock_backend.h  mock_lvgl.c  mock_lvgl.h
lvgl-simulator-sdl/tests/unit/: test_formatting.c  test_parsing.c
lvgl-simulator-sdl/ui/: ui_ams_slot_modal.c  ui_ams_slot_modal.h  ui_backend.c  ui_display.c  ui_hardware.c  ui_image_circle.c  ui_image_circle_dotted.c  ui_image_circle_empty.c  ui_image_fd_calibration_auto_multi_extruders_left.c  ui_image_fd_calibration_auto_multi_extruders_right.c  ui_image_filament_load_o_series_left.c  ui_image_filament_load_o_series_right.c  ui_image_filament_load_p_series.c  ui_image_filament_load_x_series.c  ui_image_ip_address.c  ui_image_wifi.c  ui_nfc.c  ui_nfc.h  (+3 more)
pico-nfc-bridge/: platformio.ini
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/screens/: ams_select.rs  calibration.rs  home.rs  mod.rs  settings.rs  spool_info.rs
ui/src/widgets/: ams_view.rs  button.rs  icon.rs  progress_bar.rs  spool_card.rs  status_bar.rs  weight_display.rs
(+104 files in other folders)
