[package]
name = "spoolbuddy-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# ESP32-S3 HAL (for Waveshare ESP32-S3-Touch-LCD-4.3)
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.15", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32s3", "log"] }
esp-alloc = "0.6"
esp-bootloader-esp-idf = { version = "0.3", features = ["esp32s3"] }

# Async runtime - use esp-hal's built-in embassy support
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-time = "0.4"
embassy-sync = "0.6"

# Embedded basics
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Logging
log = "0.4"

# Utilities
heapless = "0.8"

[profile.release]
opt-level = "s"
lto = "fat"

[profile.dev]
opt-level = 1
