[package]
name = "spoolbuddy-ui"
version = "0.1.0"
edition = "2021"
description = "Shared UI components for SpoolBuddy (embedded-graphics based)"

[dependencies]
# Graphics
embedded-graphics = "0.8"
embedded-graphics-core = "0.4.0"

# Thread-safe containers
critical-section = "1.1"

# String types without std
heapless = "0.8"

# Logging
log = "0.4"

# Math extensions for f32 (no_std compatible)
micromath = "2.1"
